# cloudsync

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
cloudsync/: __init__.py  auth.py  cli.py  scanner.py  state.py  sync.py
cloudsync/providers/: __init__.py  base.py  gdrive.py  s3.py
docs/: contributing.md  index.md
docs/guides/: google-drive.md  installation.md  s3-minio.md  sync-model.md
docs/reference/: cli.md  providers.md  python-api.md
docs/stylesheets/: extra.css
tests/: fake_provider.py  test_scanner.py  test_sync.py
