[project]
name = "cloudsync"
version = "0.1.0"
description = "Sync local directories to cloud storage (Google Drive, GCS, S3/MinIO)"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "boto3>=1.28.0",
    "pre-commit>=4.3.0",
]

[project.optional-dependencies]
gcs = ["google-cloud-storage>=2.0.0"]
dev = ["pytest", "pre-commit"]

[project.scripts]
cloudsync = "cloudsync.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cloudsync*"]

[tool.pytest.ini_options]
pythonpath = ["."]
