[project]
name = "cloudsync"
version = "0.1.0"
description = "Safely sync local directories to Google Drive, S3, and MinIO"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
authors = [{ name = "cloudsync contributors" }]
keywords = ["backup", "sync", "s3", "minio", "google-drive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []

[project.urls]
Repository = "https://github.com/octoopt/cloudsync"
Issues = "https://github.com/octoopt/cloudsync/issues"

[project.optional-dependencies]
gdrive = [
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2",
    "google-auth-oauthlib",
]
s3 = [
    "boto3>=1.28.0",
]
all = ["cloudsync[gdrive,s3]"]
dev = [
    "build>=1.2",
    "coverage[toml]>=7.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15",
]

[project.scripts]
cloudsync = "cloudsync.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cloudsync*"]

[tool.setuptools.package-data]
cloudsync = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cloudsync"]

[tool.coverage.report]
fail_under = 75
show_missing = true
